Fix experiment list overflow

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -993,6 +993,12 @@ a:hover {
     font-weight: bold;
   }
 
+  .list-body {
+    max-height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
   .experiment-row {
     background: #f8f8f8;
     border: 1px solid #b6b6b6;
@@ -1074,7 +1080,7 @@ a:hover {
 
   .window-body {
     width: 100%;
-    height: 340px;
+    height: 500px;
 
     padding: 10px;
 
